<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lola</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="character_name">Lola</string>
    <string name="character_race">Halfelin</string>
    <string name="character_classe1">Roublard</string>
    <string name="race">Race:</string>
    <string name="classe">Classe:</string>
    <string name="name">Nom:</string>
    <string name="comp_acrobaties">Acrobaties</string>
    <string name="comp_art_de_la_magie">Art de la Magie</string>
    <string name="alignement">Alignement:</string>
    <string name="charecterAlignement">Chaotique Neutre</string>
    <string name="niveau">Niveau:</string>
    <string name="character_level">0</string>
    <string name="experience">Experience</string>
    <string name="character_experience">0</string>
    <string name="sexe">Sexe:</string>
    <string name="character_sex">Féminin</string>
    <string name="poids">Poids:</string>
    <string name="character_weight">17kg</string>
    <string name="titlePersonnage">PERSONNAGE</string>
    <string name="taille">Taille:</string>
    <string name="characterTaille">83cm</string>
    <string name="caract_taille">[P]</string>
    <string name="title_equipement">Equipement</string>
    <string name="titleRichesses">RICHESSE</string>
    <string name="platine">Platine:</string>
    <string name="or">Or:</string>
    <string name="argent">Argent:</string>
    <string name="bronze">Bronze:</string>
    <string name="caracteristiques">Caractéristiques</string>
    <string name="force">Force:</string>
    <string name="dexterite">Dextérité:</string>
    <string name="constitution">Constitution:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="sagesse">Sagesse:</string>
    <string name="charisme">Charisme:</string>
    <string name="addXP">Gain d\'expérience</string>
    <string name="titleParticularite">Particularités de classe</string>
    <string name="titre_armes_nom">ARME</string>
    <string name="totre_arme_bonus">Attaque</string>
    <string name="titre_arme_dommages">Dommages</string>
    <string name="titre_arme_critique">Critique</string>
    <string name="titre_arme_portee">Portée</string>
    <string name="title_armure_nom">ARMURE</string>
    <string name="title_armure_ca">Bonus CA</string>
    <string name="title_armure_dex">DEX max</string>
    <string name="title_armure_penalite">Pénalité</string>
    <string name="title_armure_sorts">% sorts</string>
    <string name="title_armure_deplacement">Déplacement</string>
    <string name="title_armure_poids">Poids</string>
    <string name="buttonInitiative">Go!</string>
    <string name="PV">PV</string>
    <string name="heal">Soin</string>
    <string name="degat">Dégât</string>
    <string name="bonusdebasealattaque">BONUS DE BASE À L\'ATTAQUE</string>
    <string name="classdarmure">CLASSE D\'ARMURE</string>
    <string name="ajouter">Ajouter</string>
    <string name="retirer">Retirer</string>
    <string name="val_dé_init">Valeur du dé d\'initiative</string>
    <string name="gestionRessources">Gestion des ressources:</string>
    <string name="ajoutObjet">Ajout d\'un objet</string>
    <string name="emplacement">Emplacement:</string>
    <string name="note">Note:</string>
    <string name="bonus">Bonus:</string>
    <string name="ajoutdunearme">Ajout d\'une arme</string>
    <string name="dommages">Dommages:</string>
    <string name="portee">Portée:</string>
    <string name="critique">Critique:</string>
    <string name="plus">+</string>
    <string name="ajoutxp">Ajout d\'expérience</string>
    <string name="ajoutarmure">Ajout d\'une armure</string>
    <string name="prnalite">Pénalité</string>
    <string name="psorts">% sorts</string>
    <string name="deplacement">Déplacements</string>
    <string name="competences">COMPÉTENCES</string>
    <string name="title_initiative">INITIATIVE</string>
    <string name="titleobjet">OBJETS</string>
    <string name="type">Type:</string>
    <string name="classedarmure">Classe d\'armure</string>
    <string name="multiclassage">Multiclassage</string>
    <string name="maitredesombres">Maître des Ombres</string>
    <string name="ombrageur">Ombrageur</string>
    <string name="jetdesauvegarde">JETS DE SAUVEGARDE</string>
    <string name="vigueur">Vigueur (CON)</string>
    <string name="reflexes">Réflexes (DEX)</string>
    <string name="volonte">Volonté (SAG)</string>
    <string name="go">GO</string>

</resources>
